# pivn_app

./: CMakeLists.txt  FileWriter.h  SerialPort.h  caller.ui  callermainwindow.h  coefficients.ui  constflux.ui  counters.ui  main.cpp  plotter.ui  processing.ui  readFile.ui  trigger.ui  vecFill.h
include/: Chart.h  ChartView.h  Coefficients.h  ConstFlux.h  Counters.h  FileWriter.h  FluxCalc.h  Plotter.h  PlotterOptions.h  Processing.h  ReadFromFile.h  SettingsSL.h  TriggerMode.h  callermainwindow.h  testWidget.h  vecFill.h
settings/: settings.txt
src/: Chart.cpp  ChartView.cpp  Coefficients.cpp  ConstFlux.cpp  Counters.cpp  FileWriter.cpp  FluxCalc.cpp  Plotter.cpp  PlotterOptions.cpp  Processing.cpp  ReadFromFile.cpp  SerialPort.cpp  SettingsSL.cpp  TriggerMode.cpp  callermainwindow.cpp  testWidget.cpp  vecFill.cpp
